gcc/testsuite/rust/rustc/ui/parser/pat-tuple-3.rs
fn main() {
    match (0, 1, 2) {
        (.., pat, ..) => {}
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

